@@ -2,6 +2,7 @@ python-tooz (0.13.1-2) unstable; urgency=medium
 
   * Uploading to unstable.
   * Running tests with MySQL and PGSQL server.
+  * Also runs memcached tests.
   * Sets homepage.
 
  -- Thomas Goirand <zigo@debian.org>  Tue, 28 Apr 2015 15:21:53 +0000
